// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleListItem tests renders correctly 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="main"
    >
      <img
        alt="You can take a pie on a plane"
        class="image"
        src="https://cdn.cnn.com/cnnnext/dam/assets/170321135754-airport-security-line-file-super-169.jpg"
      />
      <a
        class="title"
        href="/articlelist/170321135754-airport-security-line"
      >
        You can take a pie on a plane
      </a>
    </div>
    <div
      class="info"
    />
    <button
      class="button"
    >
      Show more
    </button>
  </div>
</div>
`;

exports[`ArticleListItem tests renders correctly after button is clicked 1`] = `
<div>
  <div
    class="card"
  >
    <div
      class="main"
    >
      <img
        alt="You can take a pie on a plane"
        class="image"
        src="https://cdn.cnn.com/cnnnext/dam/assets/170321135754-airport-security-line-file-super-169.jpg"
      />
      <a
        class="title"
        href="/articlelist/170321135754-airport-security-line"
      >
        You can take a pie on a plane
      </a>
    </div>
    <div
      class="info"
    >
      <time
        class="time"
        datetime="2018-11-21T22:57:55.000Z"
      >
        November 21st 2018, 2:57 pm
      </time>
      <p
        class="text"
      >
        Getting excited to eat your mother's roast turkey, your uncle's stuffing and your sister's famous green bean casserole?
      </p>
    </div>
    <button
      class="button"
    >
      Show less
    </button>
  </div>
</div>
`;
